fixes spacing

--- a/app/assets/stylesheets/nu-til-styles/_components.scss
+++ b/app/assets/stylesheets/nu-til-styles/_components.scss
@@ -32,7 +32,6 @@ article {
   }
 
   aside {
-    margin-left: 0px;
     padding: 0px;
     @include flex-grow(0);
     @include flex-shrink(2);
