--- a/app/assets/stylesheets/nu-til-styles/_variables.scss
+++ b/app/assets/stylesheets/nu-til-styles/_variables.scss
@@ -8,7 +8,9 @@
   @include box-shadow(0.5vw, 0.5vw, $nu-blue-25);
   background-color: #fff;
   color: $nu-blue;
-  margin: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-bottom: 2em;
   padding: 1em;
   border: 1px solid $nu-blue-25;
 }
